# arthoolbox-c

./: .clang-format  CMakeLists.txt  LICENSE  README.md
cmake/: DisableInSourceBuildDir.cmake  OptionsHelper.cmake  TestingOptions.cmake  common.cmake  option.cmake
include/atb/: AnsiTerm.h  LinkedList.h  MacroUtils.h  RangeView.h  StaticArray.h  String.h  allocator.h  arithmetic.h  array.h  bits.h  compare.h  config.h.in  error.h  export.h.in  functional.h  ints.h  list.h  macro.h  memory.h  ratio.h  span.h  str_view.h  string.h  time.h  version.h.in
include/atb/allocator/: default.h
include/atb/container/: array.h  list.h
include/atb/generic/: String.h  Time.h  time.h
include/atb/internal/: bits.h  macro.h
include/atb/log/: AnsiTerm.h  Logging.h
include/atb/memory/: format.h  span.h  view.h
include/atb/span/: Arithmetic.h  Core.h  ints.h  string.h
include/atb/string/: format.h  span.h  view.h
src/: CMakeLists.txt  print-version.c  print-version.cpp
src/atb/: CMakeLists.txt  String.c  error.c  ratio.c  str_view.c  string.c  time.c
src/atb/allocator/: default.c
src/atb/memory/: view.c
src/atb/span/: ints.c  string.c
tests/: CMakeLists.txt
tests/Utils/: CMakeLists.txt  TypeTraits.hpp
tests/atb/: CMakeLists.txt  RangeViewUtils.hpp  test_AnsiTerm.cpp  test_LinkedList.cpp  test_Logging.cpp  test_RangeView.cpp  test_StaticArray.cpp  test_String.cpp  test_StringUtils.hpp  test_allocator.cpp  test_allocator.hpp  test_allocator_default.cpp  test_arithmetic.cpp  test_array.cpp  test_bits.cpp  test_compare.cpp  test_compare.hpp  test_error.cpp  test_error.hpp  test_functional.cpp  test_functional.hpp  test_ints.cpp  test_list.cpp  test_macro.cpp  test_memory_span.cpp  test_memory_span.hpp  test_memory_view.cpp  test_memory_view.hpp  test_ratio.cpp  test_ratio.hpp  test_span.cpp  test_span.hpp  test_span_ints.cpp  test_span_ints.hpp  test_span_string.cpp  test_span_string.hpp  test_str_view.cpp  test_string.cpp  test_string_span.cpp  test_string_span.hpp  (+5 more)
tests/atb/Span/: ArithmeticUtils.hpp  test_Arithmetic.cpp
tests/atb/container/: CMakeLists.txt  test_array.cpp  test_list.cpp
tests/atb/helper/: Compare.hpp  Core.hpp  Error.hpp  MemSpan.hpp  MemView.hpp  Memory.hpp  Ratio.hpp  StrSpan.hpp  StrView.hpp  Time.hpp
tests/atb/memory/: test_view.cpp
